# game-engine

./: CMakeLists.txt
.cache/clangd/index/: main.c.6632E366AC5374E2.idx
inc/: gwindow.h  window.h
src/: gwindow.c  main.c  window.c
